syntax = "proto3";

package laracom.service.demo;

service DemoService {
  rpc SayHello(DemoRequest) returns (DemoResponse) {}
}

message DemoRequest {
    string name = 1;
}

message DemoResponse {
    string text = 2;
}